fix: add gap spacing for texts in project card

--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 $mobile-side-spacing;
+    gap: 1rem;
   }
 
   &__name {
@@ -30,7 +31,6 @@
     list-style: none;
     gap: 0.5rem;
     flex-wrap: wrap;
-    margin-top: $mobile-spacing-top;
   }
 
   &__technology {
